# CardDoctor

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/fengniao/release/: output.json
app/kabuluo/release/: output.json
app/release/: output.json
app/src/fengniao/assets/: authorization_agreement.html  home_menu.json  provice_city.json  qr_share.json  resistrate_agreement.html  test_agreement.html
app/src/fengniao/res/layout/: activity_upgrade_join_introduce.xml  fragment_share.xml
app/src/fengniao/res/values/: strings.xml
app/src/kabuluo/assets/: authorization_agreement.html  qr_share.json  resistrate_agreement.html  test_agreement.html
app/src/kabuluo/res/drawable/: bg_qr_share_button.xml
app/src/kabuluo/res/layout/: activity_login.xml  activity_upgrade_join_introduce.xml  fragment_share.xml
app/src/kabuluo/res/values/: color.xml  strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: credit_spend.json  home_menu.json  personal_menu.json  qr_share.json  resistrate_agreement.html  test_agreement.html
app/src/main/cpp/: compress.cpp  compress.h
app/src/main/res/anim/: anim_fragment_enter.xml
app/src/main/res/assets/: text.txt
app/src/main/res/color/: main_radio_color_selector.xml  recharge_radio_color_selector.xml
app/src/main/res/drawable-xxhdpi/: bg_bind_card_button.xml  bg_do_plan_button_normal.xml  bg_do_plan_button_selector.xml  (+3 more)
app/src/xinyongdashi/assets/: authorization_agreement.html  qr_share.json  resistrate_agreement.html  test_agreement.html
app/xinyongdashi/release/: output.json
(+742 files in other folders)
